--- a/.gitignore
+++ b/.gitignore
@@ -268,6 +268,11 @@ samples/openapi3/client/petstore/ruby-faraday/Gemfile.lock
 
 # Crystal
 samples/client/petstore/crystal/lib
+/samples/server/petstore/kotlin-azure-function-app/src/gen/kotlin/
+/samples/server/petstore/kotlin-azure-function-app/.openapi-generator-ignore
+/samples/server/petstore/kotlin-azure-function-app/README.md
+/samples/server/petstore/kotlin-azure-function-app/.openapi-generator/
+/.tool-versions
 
 # Go
 samples/openapi3/client/petstore/go/privatekey.pem
