fix: use original enum values for generation and azure function json parsing

--- a/modules/openapi-generator/src/test/resources/3_0/petstore-id-as-string.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/petstore-id-as-string.yaml
@@ -92,7 +92,7 @@ paths:
               type: string
               enum:
                 - available
-                - pending
+                - penDing
                 - sold
               default: available
       responses:
@@ -724,7 +724,7 @@ components:
           deprecated: true
           enum:
             - available
-            - pending
+            - peNding
             - sold
       xml:
         name: Pet
