create api instance inside generated code

--- a/modules/openapi-generator/src/test/resources/3_0/petstore.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/petstore.yaml
@@ -97,7 +97,7 @@ paths:
                 - available
                 - pending
                 - sold
-              default: available
+              default: []
       responses:
         '200':
           description: successful operation
