--- a/pom.xml
+++ b/pom.xml
@@ -1423,6 +1423,7 @@
                 <module>modules/openapi-generator-maven-plugin</module>
                 <module>modules/openapi-generator-gradle-plugin</module>
                 <module>modules/openapi-generator-online</module>
+                <module>modules/openapi-generator-azure-functions-test</module>
             </modules>
         </profile>
     </profiles>
