--- a/modules/openapi-generator-azure-functions-test/pom.xml
+++ b/modules/openapi-generator-azure-functions-test/pom.xml
@@ -141,6 +141,7 @@
   </dependencies>
 
   <build>
+    <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
     <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
     <plugins>
       <plugin>
