--- a/samples/server/petstore/kotlin-azure-function-app/pom.xml
+++ b/samples/server/petstore/kotlin-azure-function-app/pom.xml
@@ -83,7 +83,7 @@
             <groupId>org.openapitools</groupId>
             <artifactId>openapi-generator-maven-plugin</artifactId>
             <!-- RELEASE_VERSION -->
-            <version>6.1.1-SNAPSHOT</version>
+            <version>6.5.0-SNAPSHOT</version>
             <!-- /RELEASE_VERSION -->
         </dependency>
 
@@ -181,7 +181,7 @@
                 <artifactId>openapi-generator-maven-plugin</artifactId>
 
                 <!-- RELEASE_VERSION -->
-                <version>6.1.1-SNAPSHOT</version>
+                <version>6.5.0-SNAPSHOT</version>0
                 <!-- /RELEASE_VERSION -->
                 <executions>
                     <execution>
