--- a/modules/openapi-generator-azure-functions-test/pom.xml
+++ b/modules/openapi-generator-azure-functions-test/pom.xml
@@ -29,6 +29,19 @@
     <junit5.version>5.9.1</junit5.version>
   </properties>
 
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.kotest</groupId>
+        <artifactId>kotest-bom</artifactId>
+        <version>${kotest.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.openapitools</groupId>
@@ -82,6 +95,12 @@
     <dependency>
       <groupId>io.kotest</groupId>
       <artifactId>kotest-runner-junit5-jvm</artifactId>
+      <version>${kotest.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.kotest</groupId>
+      <artifactId>kotest-extensions-junitxml-jvm</artifactId>
       <version>${kotest.version}</version>
       <scope>test</scope>
     </dependency>
@@ -168,8 +187,9 @@
       </plugin>
 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <!--                <version>${surefirePlugin.version}</version>-->
+        <version>2.22.2</version> <!-- works better than 3.0 for reports for now -->
       </plugin>
     </plugins>
   </build>
