feat: handle hidden primitive type query params

--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,4 @@ samples/openapi3/client/petstore/go/privatekey.pem
 ## OCaml
 samples/client/petstore/ocaml/_build/
 ci_settings.xml
+/modules/openapi-generator-azure-functions-test/build/
